<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainFormActivity">
    <item
        android:id="@+id/action_modify"
        android:orderInCategory="100"
        android:title="@string/action_modify"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_remove"
        android:orderInCategory="100"
        android:title="@string/action_remove"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_report"
        android:orderInCategory="100"
        android:title="@string/action_report"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_notes"
        android:orderInCategory="100"
        android:title="@string/action_notes"
        app:showAsAction="never" />
</menu>
